--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "vite",
     "test": "jest --watch",
-    "coverage": "jest run --coverage",
+    "coverage": "jest --coverage --watchAll",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
@@ -33,14 +33,5 @@
     "tailwindcss": "^3.2.7",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
-  },
-  "jest": {
-    "testEnvironment": "jest-environment-jsdom",
-    "setupFilesAfterEnv": [
-      "<rootDir>/setup-tests.js"
-    ],
-    "collectCoverageFrom": [
-      "<rootDir>/src/**/*.{ts,tsx}"
-    ]
   }
 }
